--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "web-extension-starter",
-  "version": "2.0.0",
-  "description": "Web extension starter using react and typescript",
+  "name": "google-meet-auto-accepter",
+  "version": "1.0.0",
+  "description": "Auto accept participants in Google Meet conference calls",
   "private": true,
-  "repository": "https://github.com/abhijithvijayan/web-extension-starter.git",
-  "author": "abhijithvijayan <34790378+abhijithvijayan@users.noreply.github.com>",
+  "repository": "https://github.com/mitkodkn/google-meet-auto-accepter.git",
+  "author": "Dimitar K. Nikolov <dimitar@doonloo.com>",
   "license": "MIT",
   "engines": {
     "node": ">=10.0.0",
